--- a/DesktopAPP/CanteenApp/Properties/Resources.resx
+++ b/DesktopAPP/CanteenApp/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="ZST-logo-Nadruk-448x212" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ZST-logo-Nadruk-448x212.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="scanner" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scanner.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lupa" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lupa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
